Changes

from version 0.998 to 0.999

improvements:
- new File menu to open sensor data files
- allow to specify the number of last measurement that will be used to
  calculate the mean value that used for the calibration
- allow to set that not on every cycle a calibration is performed
- when selecting an existing sensor data file after connecting to the SIX
  the new sensor data will be appended to that file -> measurements can be resumed
- when connection to the SIX is lost, the software tries to reconnect automatically

bugfixes:
- fix wrong time format in tooltips in the data graph
- fix wrong units on time axis for the temperature
- Live mode did not react on changed inputs
- enable to reconnect after the pump driver USB cable was accidentally removed
- fix x-axis range settings
- fix bug that pumps continued to run after program finished
- fix wrong timer when a single repeat is longer than a day


from version 0.997.1 to 0.998

improvements:
- it is now possible to automatically recalibrate after a pump step of choice
- new option to turn off the temperature correction
- more stable serial data readout mechanism


from version 0.997 to 0.997.1

bugfixes:
- fix buffer overflow for long SIX measurements
- fix enabling state of valve controls


from version 0.996 to 0.997

improvement:
- it is now possible to control up to 8 valves in a setup
  (by outputting 3.3 V to the valve controller)

bugfix:
- the pumps 5-8 in step 1 were by default disabled


from version 0.995.1 to 0.996

bugfixes:
- fix the Free Pumps functionality
- when the USB connection to the driver was lost, the software could be in a
  state where it could no longer readout the firmware version after reconnecting


from version 0.995 to 0.995.1

compilation:
- Win32 builds are now available
- since this release at least Lazarus 2.2 is necessary to compile


from version 0.994 to 0.995

improvements:
- it is now possible to change the time unit in the sensro data chart